--- a/FrontEnd/src/app/resources/resources.component.html
+++ b/FrontEnd/src/app/resources/resources.component.html
@@ -1,12 +1,42 @@
 <div class="module">
   <div class="container-fluid">
     <div class="module-heading">
-      Resources
+      Patient Resources
+      <button class="btn btn-success pull-right" (click)="findPerson()">Find Person</button>
     </div>
     <div class="module-body">
-      <div class="row">
-        <div class="col-md-6">
-          <h1>Hello world</h1>
+      <div *ngIf="person && !person.patients" class="row">
+        <div class="col-md-12">
+          <h2>Loading patients ...</h2>
+        </div>
+      </div>
+      <div *ngIf="person && person.patients" class="row">
+        <div class="col-md-12">
+          <div class="card">
+            <div class="card-header">
+              <div class="row">
+                <div class="form-group col-md-5">
+                  <label class="control-label">Services</label>
+                  <select class="form-control" [(ngModel)]="serviceFilter" name="serviceFilter">
+                    <option *ngFor="let service of getServices()" [ngValue]="service.id">{{service.name}}</option>
+                  </select>
+                </div>
+                <div class="form-group col-md-5">
+                  <label class="control-label">Resources</label>
+                  <select class="form-control" [(ngModel)]="resourceFilter" name="serviceFilter">
+                    <option *ngFor="let resource of getResources()" [ngValue]="resource">{{resource}}</option>
+                  </select>
+                </div>
+                <div class="form-group col-md-2">
+                  <div>&nbsp;</div>
+                  <button class="btn btn-success pull-right" (click)="refresh()">Refresh</button>
+                </div>
+              </div>
+            </div>
+            <div class="card-block">
+
+            </div>
+          </div>
         </div>
       </div>
     </div>
