--- a/FrontEnd/src/app/resources/resources.component.html
+++ b/FrontEnd/src/app/resources/resources.component.html
@@ -28,24 +28,26 @@
                 </div>
                 <div class="card-block">
                   <loadingIndicator [done]="resourceList">
-                    <table class="table table-striped table-sm table-hover">
-                      <thead>
-                        <tr>
-                          <th>Date</th>
-                          <th>Type</th>
-                          <th>Term</th>
-                          <th>Internal ID</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr *ngFor="let resource of resourceList">
-                          <td>{{getDate(resource) | cuiDate}}</td>
-                          <td>{{resource.resourceType}}</td>
-                          <td>{{getCode(resource)?.text}}</td>
-                          <td>{{resource.id}}</td>
-                        </tr>
-                      </tbody>
-                    </table>
+                    <div class="scroll-box-500">
+                      <table class="table table-striped table-sm table-hover">
+                        <thead>
+                          <tr>
+                            <th>Date</th>
+                            <th>Type</th>
+                            <th>Term</th>
+                            <th>Internal ID</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr *ngFor="let resource of resourceList" (click)="viewResource(resource)">
+                            <td>{{getDate(resource) | cuiDate}}</td>
+                            <td>{{getResourceName(resource.resourceType)}}</td>
+                            <td>{{getCode(resource)?.text}}</td>
+                            <td>{{resource.id}}</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </div>
                   </loadingIndicator>
                 </div>
               </div>
