--- a/FrontEnd/src/app/resources/resources.component.html
+++ b/FrontEnd/src/app/resources/resources.component.html
@@ -13,11 +13,11 @@
                 <div class="card-header">
                   <div class="row">
                     <div class="form-group col-md-5">
-                      <label class="control-label">Services</label>
+                      <label class="control-label">Service</label>
                       <multiSelectDropdown [data]="getServices()" [(ngModel)]="serviceFilter" name="serviceFilter" ></multiSelectDropdown>
                     </div>
                     <div class="form-group col-md-5">
-                      <label class="control-label">Resources</label>
+                      <label class="control-label">Resource Type</label>
                       <multiSelectDropdown [data]="resourceTypes" [(ngModel)]="resourceFilter" name="resourceFilter" ></multiSelectDropdown>
                     </div>
                     <div class="form-group col-md-2">
@@ -33,7 +33,7 @@
                         <thead>
                           <tr>
                             <th>Date</th>
-                            <th>Type</th>
+                            <th>Resource Type</th>
                             <th>Term</th>
                             <th>Internal ID</th>
                           </tr>
