Added pretty-print object inspector Added code.coding[0].display fallback when code.text not present

--- a/FrontEnd/src/app/resources/resources.component.html
+++ b/FrontEnd/src/app/resources/resources.component.html
@@ -42,7 +42,7 @@
                           <tr *ngFor="let resource of resourceList" (click)="viewResource(resource)">
                             <td>{{getDate(resource) | cuiDate}}</td>
                             <td>{{getResourceName(resource.resourceType)}}</td>
-                            <td>{{getCode(resource)?.text}}</td>
+                            <td>{{getCodeTerm(resource)}}</td>
                             <td>{{resource.id}}</td>
                           </tr>
                         </tbody>
