--- a/FrontEnd/src/app/resources/resources.component.html
+++ b/FrontEnd/src/app/resources/resources.component.html
@@ -8,13 +8,13 @@
       <div *ngIf="person">
         <div class="row">
           <div class="col-md-12">
-            <loadingIndicator [done]="person.patients">
+            <loadingIndicator [done]="patients">
               <div class="card">
                 <div class="card-header">
                   <div class="row">
                     <div class="form-group col-md-5">
-                      <label class="control-label">Service</label>
-                      <multiSelectDropdown [data]="getServices()" [(ngModel)]="serviceFilter" name="serviceFilter" ></multiSelectDropdown>
+                      <label class="control-label">Patient</label>
+                      <multiSelectDropdown [data]="patients" [(ngModel)]="patientFilter" name="patientFilter" ></multiSelectDropdown>
                     </div>
                     <div class="form-group col-md-5">
                       <label class="control-label">Resource Type</label>
@@ -22,33 +22,65 @@
                     </div>
                     <div class="form-group col-md-2">
                       <div>&nbsp;</div>
-                      <button class="btn btn-success pull-right" (click)="refresh()">Refresh</button>
+                      <button class="btn btn-success pull-right" (click)="loadResources()">Load</button>
                     </div>
                   </div>
                 </div>
                 <div class="card-block">
-                  <loadingIndicator [done]="resourceList">
-                    <div class="scroll-box-500">
-                      <table class="table table-striped table-sm table-hover">
+                  <div class="row">
+                    <div class="col-md-12">
+                      <h2>Patients</h2>
+                      <loadingIndicator [done]="patientResourceList">
+                        <div class="scroll-box-100">
+                          <table class="table table-sm table-hover">
                         <thead>
                           <tr>
-                            <th>Date</th>
-                            <th>Resource Type</th>
-                            <th>Term</th>
+                            <th>Date Of Birth</th>
+                            <th>Name</th>
+                            <th>Service</th>
                             <th>Internal ID</th>
                           </tr>
                         </thead>
                         <tbody>
-                          <tr *ngFor="let resource of resourceList" (click)="viewResource(resource)">
-                            <td>{{getDate(resource) | cuiDate}}</td>
-                            <td>{{getResourceName(resource.resourceType)}}</td>
-                            <td>{{getCodeTerm(resource)}}</td>
-                            <td>{{resource.id}}</td>
+                          <tr *ngFor="let patient of patientResourceList" (click)="viewResource(patient)" [ngClass]="{'highlight': (patient.patientId == highlight?.patientId && patient.serviceId && highlight?.serviceId)}">
+                            <td>{{getDate(patient.resourceJson) | cuiDate}}</td>
+                            <td>{{getPatientName(patient.resourceJson)}}</td>
+                            <td>{{getServiceName(patient.serviceId)}}</td>
+                            <td>{{patient.resourceJson.id}}</td>
                           </tr>
                         </tbody>
                       </table>
+                        </div>
+                      </loadingIndicator>
                     </div>
-                  </loadingIndicator>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-12">
+                      <h2>Resources</h2>
+                      <loadingIndicator [done]="clinicalResourceList">
+                        <div class="scroll-box-400">
+                          <table class="table table-sm">
+                        <thead>
+                          <tr>
+                            <th>Recorded Date</th>
+                            <th>Effective Date</th>
+                            <th>Resource Type</th>
+                            <th>Description</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr *ngFor="let resource of clinicalResourceList" (click)="viewResource(resource)" (mouseover)="highlight = resource" [ngClass]="{'highlight': resource == highlight}">
+                            <td>{{getRecordedDate(resource.resourceJson) | cuiDate}}</td>
+                            <td>{{getDate(resource.resourceJson) | cuiDate}}</td>
+                            <td>{{getResourceName(resource.resourceJson.resourceType)}}</td>
+                            <td>{{getDescription(resource.resourceJson)}}</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                        </div>
+                      </loadingIndicator>
+                    </div>
+                  </div>
                 </div>
               </div>
             </loadingIndicator>
