--- a/FrontEnd/src/app/person-find/person-find-dialog/person-find-dialog.component.html
+++ b/FrontEnd/src/app/person-find/person-find-dialog/person-find-dialog.component.html
@@ -31,8 +31,6 @@
   </form>
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn"
-          (click)="cancel()">Cancel</button>
-  <button type="button" class="btn btn-primary"
-          (click)="ok();">Ok</button>
+  <button type="button" class="btn" (click)="cancel()">Cancel</button>
+  <button type="button" class="btn btn-primary" (click)="ok();" [disabled]="selectedPerson == null">Ok</button>
 </div>
