Support single patient find (i.e. "person" without NHS Number)

--- a/FrontEnd/src/app/resources/resources.component.html
+++ b/FrontEnd/src/app/resources/resources.component.html
@@ -31,7 +31,7 @@
                   <!-- ***************** PATIENTS ***************** -->
                   <div class="row">
                     <div class="col-md-12">
-                      <h2>Patients</h2> <small>({{patientResourceList?.length}})</small>
+                      <h2>Patients <small>({{patientResourceList?.length}})</small></h2>
                       <loadingIndicator [done]="patientResourceList">
                         <div class="scroll-box-100">
                           <table class="table table-sm table-hover">
@@ -59,7 +59,7 @@
                   <!-- ***************** RESOURCES ***************** -->
                   <div class="row">
                     <div class="col-md-12">
-                      <h2>Resources</h2> <small>({{clinicalResourceList?.length}})</small>
+                      <h2>Resources <small>({{clinicalResourceList?.length}})</small></h2>
                       <loadingIndicator [done]="clinicalResourceList">
                         <div class="scroll-box-400">
                           <table class="table table-sm table-hover">
