--- a/FrontEnd/src/app/person-find/person-find-dialog/person-find-dialog.component.html
+++ b/FrontEnd/src/app/person-find/person-find-dialog/person-find-dialog.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-  <h4 class="modal-title">Patient find</h4>
+  <h4 class="modal-title">Person Find</h4>
   <button type="button" class="close" (click)="cancel()" aria-hidden="true">&times;</button>
 </div>
 <div class="modal-body">
@@ -20,10 +20,17 @@
       <div class="form-group col-md-12">
         <loadingIndicator [done]="matches">
           <label class="control-label">Matches</label> <small class="text-muted"></small>
-          <div class="scroll-box-150 form-control">
-            <div *ngFor="let match of matches" class="hover-box show-child-on-hover striped">
-              <div (click)="selectPerson(match, false)" (dblclick)="selectPerson(match, true)">{{ match.name }} {{ match.nhsNumber}} <small>({{match.patientCount}} patients)</small></div>
-            </div>
+          <div class="scroll-box-300 form-control">
+            <table class="table table-striped table-hover table-sm">
+              <thead>
+                <th class="w-75">Name</th><th class="w-25">NHS Number</th>
+              </thead>
+              <tbody>
+                <tr *ngFor="let match of matches" (click)="selectPerson(match, false)" (dblclick)="selectPerson(match, true)">
+                  <td>{{match.name}}</td><td>{{match.nhsNumber}}</td>
+                </tr>
+              </tbody>
+            </table>
           </div>
         </loadingIndicator>
       </div>
