--- a/FrontEnd/src/app/resources/resources.component.html
+++ b/FrontEnd/src/app/resources/resources.component.html
@@ -15,7 +15,8 @@
                   <div class="row">
                     <div class="form-group col-md-5">
                       <label class="control-label">Patient</label>
-                      <multiSelectDropdown [data]="patients" [(ngModel)]="patientFilter" name="patientFilter" ></multiSelectDropdown>
+                      <ng-template #patientTooltip>Hello World</ng-template>
+                      <multiSelectDropdown [data]="patients" [(ngModel)]="patientFilter" name="patientFilter"></multiSelectDropdown>
                     </div>
                     <div class="form-group col-md-5">
                       <label class="control-label">Resource Type</label>
