--- a/FrontEnd/src/assets/less/endeavour.less
+++ b/FrontEnd/src/assets/less/endeavour.less
@@ -104,44 +104,44 @@
 
 .scroll-box-50 {
     height: 50px;
-    overflow-y: scroll;
-    overflow-x: hidden;
+    overflow-y: auto;
+    overflow-x: auto;
 }
 
 .scroll-box-100 {
     height: 100px;
-    overflow-y: scroll;
-    overflow-x: hidden;
+    overflow-y: auto;
+    overflow-x: auto;
 }
 
 .scroll-box-150 {
     height: 150px;
-    overflow-y: scroll;
-    overflow-x: hidden;
+    overflow-y: auto;
+    overflow-x: auto;
 }
 
 .scroll-box-300 {
     height: 300px;
-    overflow-y: scroll;
-    overflow-x: hidden;
+    overflow-y: auto;
+    overflow-x: auto;
 }
 
 .scroll-box-350 {
     height: 350px;
-    overflow-y: scroll;
-    overflow-x: hidden;
+    overflow-y: auto;
+    overflow-x: auto;
 }
 
 .scroll-box-400 {
     height: 400px;
-    overflow-y: scroll;
-    overflow-x: hidden;
+    overflow-y: auto;
+    overflow-x: auto;
 }
 
 .scroll-box-500 {
     height: 500px;
-    overflow-y: scroll;
-    overflow-x: hidden;
+    overflow-y: auto;
+    overflow-x: auto;
 }
 
 .show-child-on-hover .child-to-show {
