--- a/FrontEnd/src/app/resources/resources.component.html
+++ b/FrontEnd/src/app/resources/resources.component.html
@@ -2,14 +2,14 @@
   <div class="container-fluid">
     <div class="module-heading">
       Patient Resources
-      <button class="btn btn-success pull-right" (click)="findPerson()">Find Person</button>
+      <button class="btn btn-success pull-right" (click)="findPerson()" id="findPerson">Find Person</button>
     </div>
     <div class="module-body">
       <div *ngIf="person">
         <div class="row">
           <div class="col-md-12">
             <loadingIndicator [done]="patients">
-              <div class="card">
+              <div class="card" id="resourceCard">
                 <div class="card-header">
                   <!-- ***************** FILTERS ***************** -->
                   <div class="row">
