--- a/FrontEnd/src/app/resources/resources.component.html
+++ b/FrontEnd/src/app/resources/resources.component.html
@@ -15,7 +15,7 @@
                   <div class="row">
                     <div class="form-group col-md-5">
                       <label class="control-label">Patient</label>
-                      <ng-template #patientTooltip>Hello World</ng-template>
+                      <ng-template #patientTooltip></ng-template>
                       <multiSelectDropdown [data]="patients" [(ngModel)]="patientFilter" name="patientFilter"></multiSelectDropdown>
                     </div>
                     <div class="form-group col-md-5">
@@ -24,7 +24,7 @@
                     </div>
                     <div class="form-group col-md-2">
                       <div>&nbsp;</div>
-                      <button class="btn btn-success pull-right" (click)="loadResources()">Load</button>
+                      <button class="btn btn-success pull-right" (click)="loadResources()" [disabled]="invalidSelection()" id="load">Load</button>
                     </div>
                   </div>
                 </div>
