--- a/FrontEnd/src/app/person-find/person-find-dialog/person-find-dialog.component.html
+++ b/FrontEnd/src/app/person-find/person-find-dialog/person-find-dialog.component.html
@@ -21,11 +21,11 @@
         <loadingIndicator [done]="matches">
           <label class="control-label">Matches</label> <small class="text-muted"></small>
           <div class="scroll-box-300 form-control">
-            <table class="table table-striped table-hover table-sm" *ngIf="matches && matches.length > 0">
+            <table class="table table-striped table-hover table-sm" *ngIf="matches && matches.length > 0" id="resultTable">
               <thead>
                 <th class="w-75">Name</th><th class="w-25">NHS Number</th>
               </thead>
-              <tbody id="results">
+              <tbody>
                 <tr *ngFor="let match of matches" (click)="selectPerson(match, false)" (dblclick)="selectPerson(match, true)">
                   <td>{{match.name}}</td><td>{{match.nhsNumber}}</td>
                 </tr>
