--- a/FrontEnd/src/app/resources/viewer/viewer.component.html
+++ b/FrontEnd/src/app/resources/viewer/viewer.component.html
@@ -21,6 +21,5 @@
   </ngb-tabset>
 </div>
 <div class="modal-footer">
-  <button *ngIf="cancelText" type="button" class="btn btn-secondary" (click)="activeModal.dismiss()">{{cancelText}}</button>
-  <button *ngIf="okText" type="button" class="btn btn-primary" (click)="activeModal.close()">{{okText}}</button>
+  <button type="button" class="btn btn-secondary" (click)="activeModal.dismiss()" name="close">Close</button>
 </div>
