--- a/FrontEnd/src/assets/scss/bootstrap_vars.scss
+++ b/FrontEnd/src/assets/scss/bootstrap_vars.scss
@@ -346,7 +346,7 @@ $table-inverse-bg:              $gray-dark !default;
 $table-inverse-color:           $body-bg !default;
 
 $table-bg-accent:               rgba($black,.05) !default;
-$table-bg-hover:                rgba($black,.075) !default;
+$table-bg-hover:                rgba($blue,.4) !default;
 $table-bg-active:               $table-bg-hover !default;
 
 $table-head-bg:                 $gray-lighter !default;
