Added map view to data checker

--- a/FrontEnd/src/app/resources/viewer/viewer.component.html
+++ b/FrontEnd/src/app/resources/viewer/viewer.component.html
@@ -18,6 +18,11 @@
         <app-template-view [resource]="resource"></app-template-view>
       </ng-template>
     </ngb-tab>
+    <ngb-tab title="Map">
+      <ng-template ngbTabContent>
+        <app-map-view [resource]="resource"></app-map-view>
+      </ng-template>
+    </ngb-tab>
   </ngb-tabset>
 </div>
 <div class="modal-footer">
