--- a/FrontEnd/src/app/resources/raw-view/raw-view.component.html
+++ b/FrontEnd/src/app/resources/raw-view/raw-view.component.html
@@ -3,14 +3,14 @@
 <span *ngIf="isObject(node)">
   <ul>
     <li *ngFor="let property of getKeys()">
-      <b>{{property}}:</b>
-      <app-raw-view [node]="getValue(property)"></app-raw-view>
+      <b ngbTooltip="{{getSource(path, property)}}">{{property}}:</b>
+      <app-raw-view [node]="getValue(property)" [path]="getSource(path, property)"></app-raw-view>
     </li>
   </ul>
 </span>
 
 <span *ngIf="isArray(node)">
   <span *ngFor="let arrayItem of node; let i = index">
-    [<app-raw-view [node]="arrayItem"></app-raw-view>]
+    [<app-raw-view [node]="arrayItem" [path]="path+'['+i+']'"></app-raw-view>]
   </span>
 </span>
