--- a/FrontEnd/src/app/person-find/person-find-dialog/person-find-dialog.component.html
+++ b/FrontEnd/src/app/person-find/person-find-dialog/person-find-dialog.component.html
@@ -1,12 +1,12 @@
 <div class="modal-header">
-  <h4 class="modal-title">Person Find</h4>
+  <h4 class="modal-title">Person find</h4>
   <button type="button" class="close" (click)="cancel()" aria-hidden="true">&times;</button>
 </div>
 <div class="modal-body">
   <form endUserRole="form" class="container-fluid">
     <div class="row">
       <div class="form-group col-md-12">
-        <label class="control-label">Search Criteria</label>
+        <label class="control-label">Search criteria</label>
         <div class="input-group">
           <input type="text" class="form-control" placeholder="Search term" aria-describedby="searchTerm" name="searchData"
                  [(ngModel)]="searchTerms" (keyup)="$event.keyCode == 13 ? search() : null" autofocus>
@@ -23,7 +23,7 @@
           <div class="scroll-box-300 form-control">
             <table class="table table-striped table-hover table-sm" *ngIf="matches && matches.length > 0" id="resultTable">
               <thead>
-                <th class="w-75">Name</th><th class="w-25">NHS Number</th>
+                <th class="w-75">Name</th><th class="w-25">NHS number</th>
               </thead>
               <tbody>
                 <tr *ngFor="let match of matches" (click)="selectPerson(match, false)" (dblclick)="selectPerson(match, true)" [ngClass]="{'table-active': match === selectedPerson}">
@@ -39,5 +39,5 @@
 </div>
 <div class="modal-footer">
   <button type="button" class="btn" (click)="cancel()" name="cancel">Cancel</button>
-  <button type="button" class="btn btn-primary" (click)="ok();" [disabled]="selectedPerson == null" name="Ok">Ok</button>
+  <button type="button" class="btn btn-primary" (click)="ok();" [disabled]="selectedPerson == null" name="Ok">OK</button>
 </div>
