--- a/FrontEnd/src/app/resources/resources.component.html
+++ b/FrontEnd/src/app/resources/resources.component.html
@@ -1,8 +1,8 @@
 <div class="module">
   <div class="container-fluid">
     <div class="module-heading">
-      Patient Resources
-      <button class="btn btn-success pull-right" (click)="findPerson()" id="findPerson">Find Person</button>
+      Resources
+      <button class="btn btn-success pull-right" (click)="findPerson()" id="findPerson">Find person</button>
     </div>
     <div class="module-body">
       <div *ngIf="person">
@@ -19,7 +19,7 @@
                       <multiSelectDropdown [data]="patients" [(ngModel)]="patientFilter" name="patientFilter"></multiSelectDropdown>
                     </div>
                     <div class="form-group col-md-5">
-                      <label class="control-label">Resource Type</label>
+                      <label class="control-label">Resource type</label>
                       <multiSelectDropdown [data]="resourceTypes" [(ngModel)]="resourceFilter" name="resourceFilter" ></multiSelectDropdown>
                     </div>
                     <div class="form-group col-md-2">
@@ -32,13 +32,13 @@
                   <!-- ***************** PATIENTS ***************** -->
                   <div class="row">
                     <div class="col-md-12">
-                      <h2>Patients <small>({{patientResourceList?.length}})</small></h2>
+                      <h2>Patient resources <small>({{patientResourceList?.length}})</small></h2>
                       <loadingIndicator [done]="patientResourceList">
                         <div class="scroll-box-100">
                           <table class="table table-sm table-hover" id="patientTable">
                         <thead>
                           <tr>
-                            <th>Date Of Birth</th>
+                            <th>Date of birth</th>
                             <th>Name</th>
                             <th>Service</th>
                             <th>Local ID(s)</th>
@@ -60,15 +60,15 @@
                   <!-- ***************** RESOURCES ***************** -->
                   <div class="row">
                     <div class="col-md-12">
-                      <h2>Resources <small>({{clinicalResourceList?.length}})</small></h2>
+                      <h2>Clinical resources <small>({{clinicalResourceList?.length}})</small></h2>
                       <loadingIndicator [done]="clinicalResourceList">
                         <div class="scroll-box-400">
                           <table class="table table-sm table-hover" id="resourceTable">
                         <thead>
                           <tr>
-                            <th>Recorded Date</th>
-                            <th>Effective Date</th>
-                            <th>Resource Type</th>
+                            <th>Recorded date</th>
+                            <th>Effective date</th>
+                            <th>Resource type</th>
                             <th>Description</th>
                           </tr>
                         </thead>
