--- a/FrontEnd/src/app/person-find/person-find-dialog/person-find-dialog.component.html
+++ b/FrontEnd/src/app/person-find/person-find-dialog/person-find-dialog.component.html
@@ -19,7 +19,7 @@
     <div class="row">
       <div class="form-group col-md-12">
         <loadingIndicator [done]="matches">
-          <label class="control-label">Matches</label> <small class="text-muted"></small>
+          <label class="control-label">Search results</label> <small class="text-muted"></small>
           <div class="scroll-box-300 form-control">
             <table class="table table-striped table-hover table-sm" *ngIf="matches && matches.length > 0" id="resultTable">
               <thead>
