--- a/FrontEnd/src/app/person-find/person-find-dialog/person-find-dialog.component.html
+++ b/FrontEnd/src/app/person-find/person-find-dialog/person-find-dialog.component.html
@@ -18,7 +18,7 @@
     </div>
     <div class="row">
       <div class="form-group col-md-12">
-        <loadingIndicator [done]="matches">
+        <loadingIndicator [done]="matches" [text]="''">
           <label class="control-label">Search results</label> <small class="text-muted"></small>
           <div class="scroll-box-300 form-control">
             <table class="table table-striped table-hover table-sm" *ngIf="matches && matches.length > 0" id="resultTable">
