Fixed default year range on date pickers Fixed address in person template

--- a/FrontEnd/src/app/cuicontrols/cuidate-picker/cuidate-picker.component.html
+++ b/FrontEnd/src/app/cuicontrols/cuidate-picker/cuidate-picker.component.html
@@ -1,5 +1,11 @@
 <div class="input-group">
-  <input class="form-control" placeholder="dd-mmm-yyyy" ngbDatepicker #d="ngbDatepicker" [ngModel]="value" (ngModelChange)="setValue($event)">
+  <input class="form-control"
+         placeholder="dd-mmm-yyyy"
+         ngbDatepicker #d="ngbDatepicker"
+         [ngModel]="value"
+         (ngModelChange)="setValue($event)"
+         [minDate]="minDate"
+         [maxDate]="maxDate">
   <div class="input-group-addon" (click)="d.toggle()">
     <i class="fa fa-calendar"></i>
   </div>
