1. Moved Service column to the end for "Patient Resources" section of page. 2. Added new Service column at the end for "Clinical Resources" section of page. 3. HTML comment and variable name amendments/tidy-up to reflect the current purpose of the sections.

--- a/FrontEnd/src/app/resources/resources.component.html
+++ b/FrontEnd/src/app/resources/resources.component.html
@@ -16,11 +16,11 @@
                     <div class="form-group col-md-5">
                       <label class="control-label">Patient</label>
                       <ng-template #patientTooltip></ng-template>
-                      <multiSelectDropdown [data]="patients" [(ngModel)]="patientFilter" name="patientFilter"></multiSelectDropdown>
+                      <multiSelectDropdown [data]="patients" [(ngModel)]="patientFilter" ></multiSelectDropdown>
                     </div>
                     <div class="form-group col-md-5">
                       <label class="control-label">Resource type</label>
-                      <multiSelectDropdown [data]="resourceTypes" [(ngModel)]="resourceFilter" name="resourceFilter" ></multiSelectDropdown>
+                      <multiSelectDropdown [data]="resourceTypes" [(ngModel)]="resourceFilter"  ></multiSelectDropdown>
                     </div>
                     <div class="form-group col-md-2">
                       <div>&nbsp;</div>
